@@ -50,6 +50,9 @@ Lance Rocker
 ergofobe:
 	GNOME Url handler patch
 
+Justin M. Ward <justin@yossman.net>:
+	Alphabetical Away Messages patch
+
 G. Sumner Hayes <IM: SumnerFool> Security Patches
 Brian Ryner for a little make file patch :)
 Ryan C. Gordon
